# zephyr-picoclock

./: CMakeLists.txt  README.md  prj.conf
boards/: rpi_pico.overlay
forReferenceOnGit/: ds3231.h
inc/: def.h  display.h  io.h  led.h  menu.h  rtc.h  temp.h
src/: display.c  font.h  io.c  led.c  main.c  menu.c  rtc.c  temp.c
